--- a/frontend/src/components/room.module.scss
+++ b/frontend/src/components/room.module.scss
@@ -18,7 +18,6 @@
         float: left;
         width: 40%;
         height: 100%;
-       
     }
 
     .editor{
@@ -36,34 +35,39 @@
     .card{
         width: 100%;
         border: 1px solid black;
+       // padding: 2px;
     }
     .list{
         display: flex;
-        // border: 1px solid black;
-
-        width: 100%;
+        width: 95%;
         font-size: 18px;
         color: #171414;
-        margin-bottom:6px;
-        margin-top:2px;
-        padding-top: 2px;
+        margin: 6px 6px 6px 6px;
         border: none;
-        border-bottom: 1px solid #fff;
         background-color: transparent;
     }
     .list:hover{
         background-color: rgba(191, 60, 60, 0.5);
     }
     .icon{
-        width: 15%;
+        width: 10%;
+        padding-left: 5%;
+        border: 1px solid #fff;
+        
     }
     .name{
         width: 70%;
+        border: 1px solid #fff;
+        padding: 3px;
+
+
     }
-    .icon:nth-child(1){
-        text-align: left;
+    .seek{
+        border: 1px solid #fff;
+        width: 10%;
+        text-align: center;
+        padding: 3px;
     }
-    .icon:nth-child(2){
-        text-align: right;
-    }
+    
+   
 }
