--- a/frontend/src/components/room.module.scss
+++ b/frontend/src/components/room.module.scss
@@ -52,6 +52,10 @@
     .icon{
         width: 10%;
         padding-left: 6%;
+        img{
+            width: 50%;
+            height: 50%;
+        }
         
     }
     .name{
