--- a/frontend/src/Pages/EndGamePage/endgamepage.module.scss
+++ b/frontend/src/Pages/EndGamePage/endgamepage.module.scss
@@ -1,19 +1,20 @@
 .container{
     position: absolute;
-    top: 50%;
+    top: 28%;
     left: 50%;
-    width: 600px;
+    width: 50%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(191, 60, 60, 0.5);
+    background-color: #EFF7FA;
     box-sizing: border-box;
-    box-shadow: 0 2px 10px;
     border-radius: 10px; 
     font-family: 'Courier New', Courier, monospace;
 }
 
 .card{
+    text-align: center;
     position: relative;
+    right: 10%;
     margin: 20px;
     div{
         height: 10px;
@@ -49,18 +50,20 @@
 }
 .button{
 
-    margin: auto;
+    left: 10%;
     cursor: pointer;
     display:inline-block;
     height: 20px;
-    position: center;
-    left:20%;
+    position: relative;
+    text-decoration: none;
+    color: rgba(0,0,0,1);
     div{
         margin: 20px;
         width: fit-content;
         padding: 10px;
         border: rgba(0,0,0,0.5);
-        background: rgba(191, 60, 60, 0.2);
+        background:#44f4eb9d;
+        border-radius: 5px;
         border: 1px solid #fff;
 
     }
