--- a/frontend/src/Pages/AuthPages/login.module.scss
+++ b/frontend/src/Pages/AuthPages/login.module.scss
@@ -1,13 +1,14 @@
+
 .container{
     position: absolute;
     top: 50%;
-    left: 50%;
-    width: 400px;
+    left: 20%;
+    width: 25%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(191, 60, 60, 0.5);
+    background: transparent;
     box-sizing: border-box;
-    box-shadow: 0 2px 10px;
+    // box-shadow: 0 2px 10px;
     border-radius: 10px; 
     font-family: 'Courier New', Courier, monospace;
 }
@@ -27,6 +28,7 @@
 .card{
     position: relative;
     margin: 20px;
+
     label{
         font-size: 18px;
     }
@@ -36,8 +38,8 @@
         font-size: 18px;
         color: #171414;
         margin-bottom: 30px;
-        border: none;
-        border-bottom: 1px solid #fff;
+        border:2px solid #171414;
+        border-radius: 5px;
         background-color: transparent;
     }
     button{
@@ -45,8 +47,11 @@
         cursor: pointer;
         padding: 10px;
         font-size: 18px;
-        background-color: transparent;
+        background-color: #44f4eb9d;
         border: none;
+        border-radius: 5px;
         border: 1px solid #fff;
+        
+
     }
 }
