--- a/frontend/src/Pages/RoomPage/roompage.module.scss
+++ b/frontend/src/Pages/RoomPage/roompage.module.scss
@@ -6,7 +6,7 @@
     height: 90%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(191, 60, 60, 0.5);
+    background: #44f4eb9d;
     box-sizing: border-box;
     box-shadow: 0 2px 10px;
     border-radius: 10px;
