--- a/frontend/src/components/Task/task.module.scss
+++ b/frontend/src/components/Task/task.module.scss
@@ -8,7 +8,8 @@
     background-color: transparent;
 }
 .list:hover {
-    background-color: rgba(191, 60, 60, 0.5);
+    background-color: #44f4eb9d;
+    border-radius: 5px;
 }
 .icon {
     width: 10%;
