--- a/frontend/src/components/VoteCard/votecard.module.scss
+++ b/frontend/src/components/VoteCard/votecard.module.scss
@@ -15,3 +15,9 @@
         font-size: 20px;
     }
 }
+.button{
+    background-color: #44f4eb9d;
+    border-radius: 10px;
+    font-size: 15px;
+    margin-top: 50px;
+}
