--- a/frontend/src/Pages/RoomPage/roompage.module.scss
+++ b/frontend/src/Pages/RoomPage/roompage.module.scss
@@ -30,6 +30,7 @@
     .card:nth-child(2) {
         height: 25%;
         border-top: 1px solid white;
+        padding-left: 5%;
     }
     .card {
         width: 100%;
