--- a/frontend/src/components/Task/task.module.scss
+++ b/frontend/src/components/Task/task.module.scss
@@ -14,6 +14,11 @@
 .icon {
     width: 10%;
     padding-left: 6%;
+    img{
+        padding-top: 20%;
+        width: 50%;
+        height: 50%;
+    }
 }
 .name {
     width: 70%;
