--- a/frontend/src/Pages/RoomPage/roompage.module.scss
+++ b/frontend/src/Pages/RoomPage/roompage.module.scss
@@ -37,6 +37,12 @@
         h2{
             text-align: center;
         }
+        button{
+            font-size: 15px;
+            margin-top: 2%;
+            height:20%;
+            width: fit-content;
+        }
         // padding: 2px;
     }
     .field{
