--- a/frontend/src/Pages/LobbyPage/lobbypage.module.scss
+++ b/frontend/src/Pages/LobbyPage/lobbypage.module.scss
@@ -1,11 +1,12 @@
 .container {
+    color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
     width: 70%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background-color: #EFF7FA; 
+    background-color: #292C3D;
     box-sizing: border-box;
     border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
@@ -16,12 +17,13 @@
     }
 }
 .button{
+    color: #000;
     width: 20%;
     height: 30px;
     display: inline-block;
-    background-color: #44f4eb9d;
+    background-color: rgba(107, 255, 77, 1);
     border-radius: 5px;
-    border:1px solid  rgba(0,0,0,1);
+    border:1px solid  #fff;
     font-size: 20px;
     padding-top: 10px;
     text-align: center;
