--- a/frontend/src/Pages/AuthPages/login.module.scss
+++ b/frontend/src/Pages/AuthPages/login.module.scss
@@ -1,5 +1,6 @@
 
 .container{
+    color: #fff;
     position: absolute;
     top: 50%;
     left: 20%;
@@ -13,6 +14,10 @@
     font-family: 'Courier New', Courier, monospace;
 }
 .footer{
+    text-decoration: none;
+    a{
+        color: rgba(107, 255, 77, 1);
+    }
     padding: 10px;
     font-size: 16px;
     background-color: transparent;
@@ -38,7 +43,7 @@
         font-size: 18px;
         color: #171414;
         margin-bottom: 30px;
-        border:2px solid #171414;
+        border:1px solid #fff;
         border-radius: 5px;
         background-color: transparent;
     }
@@ -47,7 +52,7 @@
         cursor: pointer;
         padding: 10px;
         font-size: 18px;
-        background-color: #44f4eb9d;
+        background-color: rgba(107, 255, 77, 1);
         border: none;
         border-radius: 5px;
         border: 1px solid #fff;
