--- a/frontend/src/Pages/JoinPage/joinpage.module.scss
+++ b/frontend/src/Pages/JoinPage/joinpage.module.scss
@@ -1,41 +1,47 @@
 .container{
+    color: rgba(255,255,255,1);
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 400px;
+    width: 50%;
+    height: 60%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(191, 60, 60, 0.5);
+    background-color: #292C3D;
     box-sizing: border-box;
-    box-shadow: 0 2px 10px;
     border-radius: 10px; 
     font-family: 'Courier New', Courier, monospace;
 }
 
 .card{
+    color: rgba(255,255,255,1);
+    left :15%;
     position: relative;
     margin: 10px;
     label{
+        display: inline-block;
         font-size: 18px;
         margin-bottom: 0px;
     }
     input{
+        display: inline-block;
         width: 50%;
         padding: 10px 0;
         font-size: 18px;
-        color: #171414;
         margin-bottom: 10px;
-        border: none;
-        border-bottom: 1px solid #fff;
+        border: 1px solid rgba(255,255,255,1);
+        border-radius: 5px;
         background-color: transparent;
     }
     button{
-        width: 50%;
+        width: 25%;
         cursor: pointer;
         margin: 5px;
+        margin-left: 0;
         padding: 10px;
         font-size: 18px;
-        background-color: transparent;
+        border-radius: 2px;
+        background-color: rgba(107, 255, 77, 1);
         border: none;
         border: 1px solid #fff;
     
@@ -43,18 +49,34 @@
 }
 
 .rules{
-    position: flex;
+    left :15%;
+    position: relative;
     margin: 10px;
     button{
         align-self: flex-start;
-        width: 50%;
+        width: 51%;
         cursor: pointer;
         margin: 5px;
+        margin-left: 0;
         padding: 10px;
         font-size: 18px;
-        background-color: transparent;
+        border-radius: 2px;
+        background-color: rgba(107, 255, 77, 1);
         border: none;
         border: 1px solid #fff;
         
     }
 }
+.button{
+    color: #000;
+    width: 20%;
+    height: 30px;
+    display: inline-block;
+    background-color: rgba(107, 255, 77, 1);
+    border-radius: 5px;
+    border:1px solid  #fff;
+    font-size: 20px;
+    padding-top: 10px;
+    text-align: center;
+}
+
