--- a/frontend/src/Pages/RoomPage/roompage.module.scss
+++ b/frontend/src/Pages/RoomPage/roompage.module.scss
@@ -1,4 +1,5 @@
 .container {
+    color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -6,9 +7,8 @@
     height: 90%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: #bcebe9bc;
+    background-color: #292C3D;
     box-sizing: border-box;
-    box-shadow: 0 2px 10px;
     border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
     display: flex;
@@ -33,6 +33,12 @@
         padding-left: 5%;
     }
     .card {
+        button{
+            height: 80%;
+            width: 120% ;
+            background-color: rgba(107, 255, 77, 1);
+            border-radius: 5px;
+        }
         width: 100%;
         h2{
             text-align: center;
