--- a/frontend/src/components/LobbyCard/lobbycard.module.scss
+++ b/frontend/src/components/LobbyCard/lobbycard.module.scss
@@ -3,7 +3,7 @@
     width: 200px;
     height: 300px;
     margin: 20px;
-    background:#44f4eb9d;
+    background-color: rgb(71, 62, 106);
     box-sizing: border-box;
     border: 1px solid  rgba(0,0,0,1);
     border-radius: 10px;
