--- a/frontend/src/Pages/JoinPage/joinpage.module.scss
+++ b/frontend/src/Pages/JoinPage/joinpage.module.scss
@@ -34,6 +34,7 @@
         background-color: transparent;
     }
     button{
+        font-family: 'Courier New', Courier, monospace;
         width: 25%;
         cursor: pointer;
         margin: 5px;
@@ -68,8 +69,11 @@
     }
 }
 .button{
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    margin-left: 125px;
     color: #000;
-    width: 20%;
+    width: 49%;
     height: 30px;
     display: inline-block;
     background-color: rgba(107, 255, 77, 1);
