--- a/frontend/src/Pages/VotePage/votepage.module.scss
+++ b/frontend/src/Pages/VotePage/votepage.module.scss
@@ -1,11 +1,12 @@
 .container {
+    color: #fff;
     position: absolute;
     top: 35%;
     left: 50%;
     width: 70%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background-color: #EFF7FA; 
+    background-color: #292C3D;
     box-sizing: border-box;
     border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
@@ -22,7 +23,7 @@
     width: 20%;
     height: 30px;
     display: inline-block;
-    background-color: #44f4eb9d;
+    background-color: rgba(107, 255, 77, 1);
     border-radius: 5px;
     border:1px solid  rgba(0,0,0,1);
     font-size: 20px;
