--- a/frontend/src/Pages/JoinPage/joinpage.module.scss
+++ b/frontend/src/Pages/JoinPage/joinpage.module.scss
@@ -25,7 +25,7 @@
     }
     input{
         display: inline-block;
-        width: 50%;
+        width: 70%;
         padding: 10px 0;
         font-size: 18px;
         margin-bottom: 10px;
@@ -34,8 +34,9 @@
         background-color: transparent;
     }
     button{
+        height: fit-content;
         font-family: 'Courier New', Courier, monospace;
-        width: 25%;
+        width: 35%;
         cursor: pointer;
         margin: 5px;
         margin-left: 0;
@@ -73,7 +74,7 @@
     font-family: 'Courier New', Courier, monospace;
     margin-left: 125px;
     color: #000;
-    width: 49%;
+    width: 69%;
     height: 30px;
     display: inline-block;
     background-color: rgba(107, 255, 77, 1);
