--- a/frontend/src/Pages/AuthPages/login.module.scss
+++ b/frontend/src/Pages/AuthPages/login.module.scss
@@ -1,5 +1,4 @@
-
-.container{
+.container {
     color: #fff;
     position: absolute;
     top: 50%;
@@ -10,19 +9,19 @@
     background: transparent;
     box-sizing: border-box;
     // box-shadow: 0 2px 10px;
-    border-radius: 10px; 
+    border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
 }
-.footer{
+.footer {
     text-decoration: none;
-    a{
+    a {
         color: rgba(107, 255, 77, 1);
     }
     padding: 10px;
     font-size: 16px;
     background-color: transparent;
     border: none;
-    button{
+    button {
         cursor: pointer;
         padding: 10px;
         font-size: 16px;
@@ -30,37 +29,42 @@
         border: none;
     }
 }
-.card{
+.card {
     position: relative;
     margin: 20px;
 
-    label{
+    label {
         font-size: 18px;
     }
-    input{
+    input {
         width: 100%;
         padding: 10px 0;
         font-size: 18px;
         color: #171414;
         margin-bottom: 30px;
-        border:1px solid #fff;
+        border: 1px solid #fff;
         border-radius: 5px;
         background-color: transparent;
     }
-    button{
-        width: 100%;
-        cursor: pointer;
-        padding: 10px;
-        font-size: 18px;
-        background-color: rgba(107, 255, 77, 1);
-        border: none;
-        border-radius: 5px;
-        border: 1px solid #fff;
-        
-
+    a {
+        text-decoration: none;
+        color: inherit;
+        div {
+            width: 100%;
+            cursor: pointer;
+            padding: 10px;
+            font-size: 18px;
+            background-color: rgba(107, 255, 77, 1);
+            border: none;
+            border-radius: 5px;
+            border: 1px solid #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
-h1{
+h1 {
     text-align: center;
 }
