--- a/frontend/src/Pages/JoinPage/joinpage.module.scss
+++ b/frontend/src/Pages/JoinPage/joinpage.module.scss
@@ -1,5 +1,5 @@
-.container{
-    color: rgba(255,255,255,1);
+.container {
+    color: rgba(255, 255, 255, 1);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -7,33 +7,33 @@
     height: 60%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background-color: #292C3D;
+    background-color: #292c3d;
     box-sizing: border-box;
-    border-radius: 10px; 
+    border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
 }
 
-.card{
-    color: rgba(255,255,255,1);
-    left :15%;
+.card {
+    color: rgba(255, 255, 255, 1);
+    left: 15%;
     position: relative;
     margin: 10px;
-    label{
+    label {
         display: inline-block;
         font-size: 18px;
         margin-bottom: 0px;
     }
-    input{
+    input {
         display: inline-block;
         width: 50%;
         padding: 10px 0;
         font-size: 18px;
         margin-bottom: 10px;
-        border: 1px solid rgba(255,255,255,1);
+        border: 1px solid rgba(255, 255, 255, 1);
         border-radius: 5px;
         background-color: transparent;
     }
-    button{
+    button {
         font-family: 'Courier New', Courier, monospace;
         width: 25%;
         cursor: pointer;
@@ -45,15 +45,28 @@
         background-color: rgba(107, 255, 77, 1);
         border: none;
         border: 1px solid #fff;
-    
+    }
+
+    .button {
+        font-family: 'Courier New', Courier, monospace;
+        width: 25%;
+        cursor: pointer;
+        margin: 5px;
+        margin-left: 0;
+        padding: 10px;
+        font-size: 18px;
+        border-radius: 2px;
+        background-color: rgba(107, 255, 77, 1);
+        border: none;
+        border: 1px solid #fff;
     }
 }
 
-.rules{
-    left :15%;
+.rules {
+    left: 15%;
     position: relative;
     margin: 10px;
-    button{
+    button {
         align-self: flex-start;
         width: 51%;
         cursor: pointer;
@@ -65,10 +78,9 @@
         background-color: rgba(107, 255, 77, 1);
         border: none;
         border: 1px solid #fff;
-        
     }
 }
-.button{
+.button {
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
     margin-left: 125px;
@@ -78,9 +90,8 @@
     display: inline-block;
     background-color: rgba(107, 255, 77, 1);
     border-radius: 5px;
-    border:1px solid  #fff;
+    border: 1px solid #fff;
     font-size: 20px;
     padding-top: 10px;
     text-align: center;
 }
-
