--- a/frontend/src/Pages/AuthPages/login.module.scss
+++ b/frontend/src/Pages/AuthPages/login.module.scss
@@ -21,7 +21,8 @@
     font-size: 16px;
     background-color: transparent;
     border: none;
-    button {
+    width : 100%;
+    button{
         cursor: pointer;
         padding: 10px;
         font-size: 16px;
