--- a/frontend/src/Pages/KickPage/kick.module.scss
+++ b/frontend/src/Pages/KickPage/kick.module.scss
@@ -14,7 +14,7 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-.card {
+.cart {
     color: rgba(255, 255, 255, 1);
     left: 1%;
     top: 30%;
